@@ -4,6 +4,7 @@ Development
 * Move all gulp tasks to a npm module for maintainability. See https://github.com/LastCallMedia/gulp-drupal-tasks
 * Update gulp configuration to a more tool-oriented syntax.  See gulpconfig.js
 * Move phantomas tests to yml files instead of gulp configuration for easier visibility and reuse.
+* Use configurable docroot for php docker container.
 
 1.1.0 2017-01-09
 ----------------
